; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/pico/extr_memory.c_PicoMemSetupPico.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/pico/extr_memory.c_PicoMemSetupPico.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@m68k_read8_map = common dso_local global i32 0, align 4
@PicoRead8_pico = common dso_local global i32 0, align 4
@m68k_read16_map = common dso_local global i32 0, align 4
@PicoRead16_pico = common dso_local global i32 0, align 4
@m68k_write8_map = common dso_local global i32 0, align 4
@PicoWrite8_pico = common dso_local global i32 0, align 4
@m68k_write16_map = common dso_local global i32 0, align 4
@PicoWrite16_pico = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @PicoMemSetupPico() #0 {
  %1 = call i32 (...) @PicoMemSetup()
  %2 = call i32 @m68k_map_unmap(i32 4194304, i32 12582911)
  %3 = load i32, i32* @m68k_read8_map, align 4
  %4 = load i32, i32* @PicoRead8_pico, align 4
  %5 = call i32 @cpu68k_map_set(i32 %3, i32 8388608, i32 8454143, i32 %4, i32 1)
  %6 = load i32, i32* @m68k_read16_map, align 4
  %7 = load i32, i32* @PicoRead16_pico, align 4
  %8 = call i32 @cpu68k_map_set(i32 %6, i32 8388608, i32 8454143, i32 %7, i32 1)
  %9 = load i32, i32* @m68k_write8_map, align 4
  %10 = load i32, i32* @PicoWrite8_pico, align 4
  %11 = call i32 @cpu68k_map_set(i32 %9, i32 8388608, i32 8454143, i32 %10, i32 1)
  %12 = load i32, i32* @m68k_write16_map, align 4
  %13 = load i32, i32* @PicoWrite16_pico, align 4
  %14 = call i32 @cpu68k_map_set(i32 %12, i32 8388608, i32 8454143, i32 %13, i32 1)
  ret void
}

declare dso_local i32 @PicoMemSetup(...) #1

declare dso_local i32 @m68k_map_unmap(i32, i32) #1

declare dso_local i32 @cpu68k_map_set(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
